Updated the calculator
Changed the calculator so it works for every day and updates after inputting a new value

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="settings-header">
             <h3>Settings</h3>
             <form action="set">
-                <input type="checkbox" name="weekend-work" id="">
+                <input type="checkbox" id="weekend-work">
                 <label for="weekend-work">Work in the weekend</label>
             </form>
         </div>
@@ -30,52 +30,52 @@
         <tr>        
             <th rowspan="7" class="name-container"><input name="name-container" type="text"></th>
             <td class="monday">Monday</td>
-            <td><input type="time" id="startTime" value="09:00"></td>
-            <td><input type="number" id="break"></td>
-            <td><input type="time" id="endTime" value="17:00"></td>
-            <td><input type="time" id="totalTime"></td>
+            <td><input type="time" id="monday-startTime" value="00:00"></td>
+            <td><input type="number" id="monday-break"></td>
+            <td><input type="time" id="monday-endTime" value="00:00"></td>
+            <td><input type="time" id="monday-totalTime" value="00:00"></td>
         </tr>
         <tr>        
             <td class="tuesday">Tuesday</td>
-            <td>09:00</td>
-            <td>03:00</td>
-            <td>17:00</td>
-            <th>07:30</th>
+            <td><input type="time" id="tuesday-startTime" value="00:00"></td>
+            <td><input type="number" id="tuesday-break"></td>
+            <td><input type="time" id="tuesday-endTime" value="00:00"></td>
+            <td><input type="time" id="tuesday-totalTime" value="00:00"></td>
         </tr>
         <tr>        
             <td class="wednesday">Wednesday</td>
-            <td>09:00</td>
-            <td>03:00</td>
-            <td>17:00</td>
-            <th>07:30</th>
+            <td><input type="time" id="wednesday-startTime" value="00:00"></td>
+            <td><input type="number" id="wednesday-break"></td>
+            <td><input type="time" id="wednesday-endTime" value="00:00"></td>
+            <td><input type="time" id="wednesday-totalTime" value="00:00"></td>
         </tr>
         <tr>        
             <td class="thursday">Thursday</td>
-            <td>09:00</td>
-            <td>03:00</td>
-            <td>17:00</td>
-            <th>07:30</th>
+            <td><input type="time" id="thursday-startTime" value="00:00"></td>
+            <td><input type="number" id="thursday-break"></td>
+            <td><input type="time" id="thursday-endTime" value="00:00"></td>
+            <td><input type="time" id="thursday-totalTime" value="00:00"></td>
         </tr>
         <tr>        
             <td class="friday">Friday</td>
-            <td>09:00</td>
-            <td>03:00</td>
-            <td>17:00</td>
-            <th>07:30</th>
+            <td><input type="time" id="friday-startTime" value="00:00"></td>
+            <td><input type="number" id="friday-break"></td>
+            <td><input type="time" id="friday-endTime" value="00:00"></td>
+            <td><input type="time" id="friday-totalTime" value="00:00"></td>
         </tr>
         <tr>        
             <td class="saturday">Saturday</td>
-            <td>09:00</td>
-            <td>03:00</td>
-            <td>17:00</td>
-            <th>07:30</th>
+            <td><input type="time" id="saturday-startTime" value="00:00"></td>
+            <td><input type="number" id="saturday-break"></td>
+            <td><input type="time" id="saturday-endTime" value="00:00"></td>
+            <td><input type="time" id="saturday-totalTime" value="00:00"></td>
         </tr>
         <tr>        
             <td class="sunday">Sunday</td>
-            <td>09:00</td>
-            <td>03:00</td>
-            <td>17:00</td>
-            <th>07:30</th>
+            <td><input type="time" id="sunday-startTime" value="00:00"></td>
+            <td><input type="number" id="sunday-break"></td>
+            <td><input type="time" id="sunday-endTime" value="00:00"></td>
+            <td><input type="time" id="sunday-totalTime" value="00:00"></td>
         </tr>
         <tr>        
             <th colspan="8"><input class="create-row" type="button" id="btnAdd" value="Create Employee +"></th>
