added total week calculator
It now automatically calculates the time worked the entire week.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <th rowspan="8"><button class="create-column">Create Column +</button></th>
         </tr>
         <tr>        
-            <th rowspan="7" class="name-container"><input name="name-container" type="text"></th>
+            <th rowspan="6" class="name-container"><input name="name-container" type="text"></th>
             <td class="monday">Monday</td>
             <td><input type="time" id="monday-startTime" value="00:00"></td>
             <td><input type="number" id="monday-break"></td>
@@ -71,6 +71,7 @@
             <td><input type="time" id="saturday-totalTime" value="00:00"></td>
         </tr>
         <tr>        
+            <th>Total<div id="weekHours">1</div></th>
             <td class="sunday">Sunday</td>
             <td><input type="time" id="sunday-startTime" value="00:00"></td>
             <td><input type="number" id="sunday-break"></td>
