--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
                 <td><input type="time" id="sunday-totalTime" value="00:00"></td>
             </tr>
         </tbody>
-        <tr>        
-            <th colspan="8"><button onclick="AddEmployee()" id="CreateRow">Create Employee +</button></th>
-        </tr>
+        <tfoot>
+            <tr>        
+                <th colspan="8"><button onclick="AddEmployee()" id="CreateRow">Create Employee +</button></th>
+            </tr>
+        </tfoot>
     </table>
     <script src="javascript.js"></script>
 </body>
