--- a/index.html
+++ b/index.html
@@ -33,53 +33,53 @@
             <tr>        
                 <th rowspan="6" class="name-container"><input name="name-container" type="text"></th>
                 <td class="monday">Monday</td>
-                <td><input type="time" id="monday-startTime" value="00:00"></td>
-                <td><input type="time" id="monday-endTime" value="00:00"></td>
-                <td><input type="number" id="monday-break"></td>
-                <td><input type="time" id="monday-totalTime" value="00:00"></td>
+                <td><input step="900" type="time" id="monday-startTime" value="00:00" step="900"></td>
+                <td><input step="900" type="time" id="monday-endTime" value="00:00"></td>
+                <td><input step="900" type="number" id="monday-break"></td>
+                <td><input step="900" type="time" id="monday-totalTime" value="00:00"></td>
             </tr>
             <tr>        
                 <td class="tuesday">Tuesday</td>
-                <td><input type="time" id="tuesday-startTime" value="00:00"></td>
-                <td><input type="time" id="tuesday-endTime" value="00:00"></td>
-                <td><input type="number" id="tuesday-break"></td>
-                <td><input type="time" id="tuesday-totalTime" value="00:00"></td>
+                <td><input step="900" type="time" id="tuesday-startTime" value="00:00"></td>
+                <td><input step="900" type="time" id="tuesday-endTime" value="00:00"></td>
+                <td><input step="900" type="number" id="tuesday-break"></td>
+                <td><input step="900" type="time" id="tuesday-totalTime" value="00:00"></td>
             </tr>
             <tr>        
                 <td class="wednesday">Wednesday</td>
-                <td><input type="time" id="wednesday-startTime" value="00:00"></td>
-                <td><input type="time" id="wednesday-endTime" value="00:00"></td>
-                <td><input type="number" id="wednesday-break"></td>
-                <td><input type="time" id="wednesday-totalTime" value="00:00"></td>
+                <td><input step="900" type="time" id="wednesday-startTime" value="00:00"></td>
+                <td><input step="900" type="time" id="wednesday-endTime" value="00:00"></td>
+                <td><input step="900" type="number" id="wednesday-break"></td>
+                <td><input step="900" type="time" id="wednesday-totalTime" value="00:00"></td>
             </tr>
             <tr>        
                 <td class="thursday">Thursday</td>
-                <td><input type="time" id="thursday-startTime" value="00:00"></td>
-                <td><input type="time" id="thursday-endTime" value="00:00"></td>
-                <td><input type="number" id="thursday-break"></td>
-                <td><input type="time" id="thursday-totalTime" value="00:00"></td>
+                <td><input step="900" type="time" id="thursday-startTime" value="00:00"></td>
+                <td><input step="900" type="time" id="thursday-endTime" value="00:00"></td>
+                <td><input step="900" type="number" id="thursday-break"></td>
+                <td><input step="900" type="time" id="thursday-totalTime" value="00:00"></td>
             </tr>
             <tr>        
                 <td class="friday">Friday</td>
-                <td><input type="time" id="friday-startTime" value="00:00"></td>
-                <td><input type="time" id="friday-endTime" value="00:00"></td>
-                <td><input type="number" id="friday-break"></td>
-                <td><input type="time" id="friday-totalTime" value="00:00"></td>
+                <td><input step="900" type="time" id="friday-startTime" value="00:00"></td>
+                <td><input step="900" type="time" id="friday-endTime" value="00:00"></td>
+                <td><input step="900" type="number" id="friday-break"></td>
+                <td><input step="900" type="time" id="friday-totalTime" value="00:00"></td>
             </tr>
             <tr>        
                 <td class="saturday">Saturday</td>
-                <td><input type="time" id="saturday-startTime" value="00:00"></td>
-                <td><input type="time" id="saturday-endTime" value="00:00"></td>
-                <td><input type="number" id="saturday-break"></td>
-                <td><input type="time" id="saturday-totalTime" value="00:00"></td>
+                <td><input step="900" type="time" id="saturday-startTime" value="00:00"></td>
+                <td><input step="900" type="time" id="saturday-endTime" value="00:00"></td>
+                <td><input step="900" type="number" id="saturday-break"></td>
+                <td><input step="900" type="time" id="saturday-totalTime" value="00:00"></td>
             </tr>
             <tr>        
                 <th>Total<div id="weekHours">0</div></th>
                 <td class="sunday">Sunday</td>
-                <td><input type="time" id="sunday-startTime" value="00:00"></td>
-                <td><input type="time" id="sunday-endTime" value="00:00"></td>
-                <td><input type="number" id="sunday-break"></td>
-                <td><input type="time" id="sunday-totalTime" value="00:00"></td>
+                <td><input step="900" type="time" id="sunday-startTime" value="00:00"></td>
+                <td><input step="900" type="time" id="sunday-endTime" value="00:00"></td>
+                <td><input step="900" type="number" id="sunday-break"></td>
+                <td><input step="900" type="time" id="sunday-totalTime" value="00:00"></td>
             </tr>
         </tbody>
         <tfoot>
